update of php upload class and jquery in upload script

--- a/partials/opensource.html
+++ b/partials/opensource.html
@@ -10,54 +10,50 @@
 
 
 <div id="uploadContainer">
-	<label class="control-label">Select Files</label>
-	<input id="input-ke-2" name="input-ke-2" type="file" multiple class="file-loading">
-	<script>
-	// initialize with defaults
-	$("#input-id").fileinput();
-	// with plugin options
-	$("#input-id").fileinput({'showUpload':false, 'previewFileType':'any'});
-	<!-- must load the font-awesome.css for this example -->
-	$("#input-ke-2").fileinput({
-		uploadAsync: true, 
-		theme: "explorer",
-		uploadAsync: true,
-		uploadUrl: "uploadfiles/upload.php",
-		minFileCount: 1,
-		maxFileCount: 100,
-		overwriteInitial: false,
-		initialPreviewAsData: true, // defaults markup  
-		preferIconicPreview: true, // this will force thumbnails to display icons for following file extensions
-		previewFileIconSettings: { // configure your icon file extensions
-			'doc': '<i class="fa fa-file-word-o text-primary"></i>',
-			'xls': '<i class="fa fa-file-excel-o text-success"></i>',
-			'ppt': '<i class="fa fa-file-powerpoint-o text-danger"></i>',
-			'pdf': '<i class="fa fa-file-pdf-o text-danger"></i>',
-			'zip': '<i class="fa fa-file-archive-o text-muted"></i>',
-			'htm': '<i class="fa fa-file-code-o text-info"></i>',
-			'txt': '<i class="fa fa-file-text-o text-info"></i>',
-			'mov': '<i class="fa fa-file-movie-o text-warning"></i>',
-			'mp3': '<i class="fa fa-file-audio-o text-warning"></i>',
-			// note for these file types below no extension determination logic 
-			// has been configured (the keys itself will be used as extensions)
-			'jpg': '<i class="fa fa-file-photo-o text-danger"></i>', 
-			'gif': '<i class="fa fa-file-photo-o text-muted"></i>', 
-			'png': '<i class="fa fa-file-photo-o text-primary"></i>'    
-		},
-		previewFileExtSettings: { // configure the logic for determining icon file extensions
-			'zip': function(ext) {
-				return ext.match(/(zip|rar|tar|gzip|gz|7z)$/i);
-			},
-			'htm': function(ext) {
-				return ext.match(/(htm|html)$/i);
-			},
-			'txt': function(ext) {
-				return ext.match(/(txt|ini|csv|java|php|js|css)$/i);
-			},
-		}
-	});
 
+
+	<div style="margin-bottom:40px; margin-top:20px;">
+		<label class="control-label">Select Test Framework</label>
+		<br/>
+	
+		<select class="form-control" id="framework_select" name="framework_select">
+			<option value="default"></option>
+			<option value="nunit">nunit</option>
+			<option value="boosttest">boosttest</option>
+			<option value="junit">junit</option>
+			<option value="googletest">googletest</option>
+		</select>
+	
+	</div>
+	
+	<div id="files_select" hidden>
+		<label class="control-label">Select Files</label>
+		<input id="input-ke-2" name="input-ke-2" type="file" multiple class="file-loading">
+	</div>
+	
+	<script>
+	
+		var URL = "uploadfiles/upload.php?framework=" + $("#framework_select").val();
+	
+		$("#framework_select").on('change', function() {
+			changeURL();
+		});
+
+		function changeURL () {
+			
+			URL =  "uploadfiles/upload.php?framework=" + $("#framework_select").val();
+			$("#files_select").show();
+			$.getScript( "js/fileupload.js", function( data, textStatus, jqxhr ) {
+			console.log( data ); 					// Data returned
+			console.log( textStatus ); 				// Success
+			console.log( jqxhr.status ); 			// 200
+			console.log( "Load was performed." );
+			});
+		}//
+	
 	</script>
+	
+
 
 </div> <!--End uploadContainer-->
 
