add the gtest.pm which is equivalent to junit.pm

--- a/partials/opensource.html
+++ b/partials/opensource.html
@@ -21,7 +21,7 @@
 			<option value="nunit">nunit</option>
 			<option value="boosttest">boosttest</option>
 			<option value="junit">junit</option>
-			<option value="googletest">googletest</option>
+			<option value="gtest">gtest (googletest)</option>
 		</select>
 	
 	</div>
