new gui under home partial html page

--- a/partials/home.html
+++ b/partials/home.html
@@ -12,22 +12,66 @@
            
                 <div class="widget-body">
                     <div class="widget-main">
-                        <h4 class="header blue lighter bigger"> Welcome for our Test-Framework</h4>
+                        <h4 class="header blue lighter bigger"> Choose one of those test-frameworks</h4>
 						
+						<style>
+						#logobox 
+						{
+							width: 	100px;
+							height: 100px;
+						}
 						
-						<img src="partials/img/boostlogo.png" class="img-thumbnail" alt="boost-test-logo">
-						<br/>
+						#infobox
+						{
+							padding-left: 80px;
+						}
+						</style>
 						
-						<img src="partials/img/catch.png" class="img-thumbnail img-fluid" alt="catch-test-logo">
-						<br/>
+						<table>
+						<thead>
+						<tr><td></td><td style="padding-left: 80px; width: 500px;"></td></tr>
+						</thead>
 						
-					    <img src="partials/img/googletest.jpg" class="img-thumbnail img-fluid" alt="google-test-logo"> 
-						<br/> 
-						  
-						<img src="partials/img/junit.png" class="img-thumbnail img-fluid" alt="junit-test-logo"> 
-						<br/>
-			
-						<img src="partials/img/qUnit.png" class="img-thumbnail img-fluid" alt="junit-test-logo"> 
+						<tbody>
+						<tr>
+						<td id="logobox"><img src="partials/img/junit.png" class="img-thumbnail img-fluid" alt="junit-test-logo" /></td> 
+						<td id="infobox">JUnit is testing framework for java-programmers. JUnit is a simple framework to write repeatable tests. 
+						It is an instance of the xUnit architecture for unit testing frameworks.</td>
+						<td id="infobox"><a href="http://junit.org/junit4/" target="_blank">junit</a></td>
+						</tr>
+						
+						<tr>
+						<td id="logobox"><img src="partials/img/nunit.png" class="img-thumbnail img-fluid" alt="nunit-test-logo" /> </td> 
+						<td id="infobox"> NUnit is a unit-testing framework for all .Net languages. Initially ported from JUnit, the current production release, version 3, has been completely rewritten with many new features and support for a wide range of .NET platforms.</td>
+						<td id="infobox"><a href="http://nunit.org/" target="_blank">nunit</a></td>
+						</tr>
+						
+						<tr>						
+					    <td id="logobox"><img src="partials/img/googletest.jpg" class="img-thumbnail img-fluid" alt="google-test-logo" /> </td> 
+						<td id="infobox">Google Test (Gtest), is Google's C++ test framework a XUnit test framework.</td>
+						<td id="infobox"><a href="https://github.com/google/googletest" target="_blank">googletest</a></td>
+						</tr>
+						
+						<tr>
+						<td id="logobox"><img src="partials/img/boostlogo.png" class="img-thumbnail" alt="boost-test-logo" /> </td>
+						<td id="infobox">The Boost Test Library Unit Test Framework (referred by the acronym UTF) provides both an easy to use and flexible solution to this problem domain: C++ unit test implementation and organization.</td>
+						<td id="infobox"><a href="http://www.boost.org/doc/libs/1_36_0/libs/test/doc/html/utf.html" target="_blank">boosttest</a></td>
+						</tr>
+						
+						<tr>
+						<td id="logobox"><img src="partials/img/catch.png" class="img-thumbnail img-fluid" alt="catch-test-logo" /> </td>
+						<td id="infobox">Catch stands for C++ Automated Test Cases in Headers and is a multi-paradigm automated test framework for C++ and Objective-C (and, maybe, C). It is implemented entirely in a set of header files, but is packaged up as a single header for extra convenience.</td>
+						<td id="infobox"><a href="https://github.com/philsquared/Catch" target="_blank">catch</a></td>
+						</tr>
+						
+						<tr>
+						<td id="logobox"><img src="partials/img/qUnit.png" class="img-thumbnail img-fluid" alt="qunit-test-logo" /> </td> 
+						<td id="infobox">QUnit is a powerful, easy-to-use JavaScript unit testing framework. It's used by the jQuery, jQuery UI and jQuery Mobile projects and is capable of testing any generic JavaScript code, including itself!</td>
+						<td id="infobox"><a href="https://qunitjs.com/" target="_blank">qunit</a></td>
+						</tr>
+						
+						</tbody>
+						</table>
 						<br/>
                     </div>
                 </div>
