--- a/partials/home.html
+++ b/partials/home.html
@@ -12,21 +12,26 @@
            
                 <div class="widget-body">
                     <div class="widget-main">
+
+                       
+
+
+
                         <h4 class="header blue lighter bigger"> Choose one of those test-frameworks</h4>
 						
 						<style>
-						#logobox 
-						{
-							width: 	100px;
-							height: 100px;
-						}
+						    #logobox 
+						    {
+							    width: 	100px;
+							    height: 100px;
+						    }
 						
-						#infobox
-						{
-							padding-left: 80px;
-						}
+						    #infobox
+						    {
+							    padding-left: 80px;
+						    }
 						</style>
-						
+                        			
 						<table>
 						<thead>
 						<tr><td></td><td style="padding-left: 80px; width: 500px;"></td></tr>
@@ -72,7 +77,17 @@
 						
 						</tbody>
 						</table>
-						<br/>
+                        <br/>
+                        <hr/>
+
+                         <p>
+                        Use <strong>testimon</strong> to upload your XML/JSON - Testfiles directly or use our rest api service above github for:</p>
+                        
+                        <ul style="padding-left: 180px;">
+                            <li>versioning of test's</li>    
+                            <li>visualization and documentation of test's</li>
+                        </ul>
+						<hr/>
                     </div>
                 </div>
         </div>
